--- a/Week-0/Assignment-1/index.html
+++ b/Week-0/Assignment-1/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="style.css" type="text/css" />
-    <link rel="stylesheet" href="base.css" type="text/css" />
+    <link rel="stylesheet" href="hw0.css" type="text/css" />
     <title>Tony</title>
   </head>
   <body>
